[package]
name = "scalare"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.25", features = ["derive"] }
hex = "0.4.3"
rsa = "0.9.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha3 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
